--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 pythonpath = src
 testpaths = tests
-python_files = tests.py
+python_files = test.py
 addopts=--tb=native --cov=src --cov-report term-missing -v
