--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,4 +25,4 @@ jobs:
       run: pip install pytest pytest-cov
     - name: Run Pytest
       run: pytest
-      working-directory: demo-app
+      working-directory:
