--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,4 +25,6 @@ jobs:
       run: pip install pytest pytest-cov
     - name: Run Pytest
       run: pytest
+    - name: Update pandas
+      run: python -m Update pandas pandas-cov
       working-directory:
